2008-11-28  Matthias Clasen  <mclasen@redhat.com>

	Bug 562378 – callback return value not respected for callback option
	with no arg

	* glib/goption.c (parse_long_option): Return the parse_arg return
	value even for no-arg callbacks. Patch by Christian Persch

	* glib/tests/option-context.c: Add a test for a callback which
	returns FALSE.

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 559413 – g_option_group_set_error_hook docs buglet

	* glib/goption.c: Doc fix.

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 560568 – gkeyfile docs buglet

	* glib/gkeyfile.c: Clarify the docs.

2008-11-23  Christian Persch  <chpe@gnome.org>

	Bug 560569 – gkeyfile doesn't use the set list_separator in some cases

	* glib/gkeyfile.c: (g_key_file_get_locale_string_list),
	(g_key_file_set_locale_string_list), (g_key_file_set_integer_list),
	(g_key_file_set_double_list): Use the key file's list separator character,
	not the default one.

	* glib/tests/keyfile.c: (test_lists), (test_reload_idempotency): Test
	this.

2008-11-21  Christophe Fergeau <teuf@gnome.org>

	Bug 561212 – GFileReadMoreCallback API doc refers to non-existant function

	* gio/giotypes.h: fix name of function referred to in
	GFileReadMoreCallback API documentation

2008-11-21  Matthias Clasen <mclasen@redhat.com>

	* configure.in: Bump gtk-doc dependency to 1.11 for
	nicer index-generation.

2008-11-14  Matthias Clasen <mclasen@redhat.com>

	* NEWS: Updates

2008-11-04  Christian Dywan  <christian@imendio.com>

	Bug 558672 – NULL key lookup using g_hash_table_lookup_extended()

	* glib/ghash.c:
	Clarify g_hash_table_lookup_extended

2008-11-02  Tor Lillqvist  <tml@novell.com>

	* configure.in: Expand also build/win32/vs9/Makefile.

2008-10-31  Christian Dywan  <christian@imendio.com>

	Bug 558513 – g_warn_if_fail FIXME in gtestutils

	* glib/gtestutils.c (g_test_log_send):
	Turn g_assert into g_warn_if_fail as advised

2008-10-31  Grahame Bowland  <grahame@angrygoats.net>
